[U] Spiget: Modify download latest